Make buttons and cards

--- a/pattern-library.html
+++ b/pattern-library.html
@@ -20,6 +20,7 @@
               <li><a class="gutter pad-t-1-4 pad-b-1-4 block" href="#typography">Typography</a></li>
               <li><a class="gutter pad-t-1-4 pad-b-1-4 block" href="#grid">Grid</a></li>
               <li><a class="gutter pad-t-1-4 pad-b-1-4 block" href="#modules">Modules</a></li>
+                <li><a class="gutter pad-t-1-4 pad-b-1-4 block" href="#buttons">Buttons</a></li>
           </ul>
         </nav>
       </div>
@@ -361,6 +362,44 @@
     &lt;p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.&lt;/p>
   &lt;/div>
 &lt;/div>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+
+</section>
+
+        <section class="pattern" id="buttons">
+  <div class="push">
+    <div class="pattern-toolbar gutter pad-t-1-4 pad-b-1-4">
+      <h2 class="pattern-name peta push-1-8">Buttons</h2>
+    </div>
+
+      <div class="pattern-desc milli island">
+        <div class="max-length"><p>The buttons use the primary colours to appear calm and easy.</p>
+<ul>
+<li>The regular buttons are for cards, forms and where the backgrounds are light.</li>
+<li>The light buttons are for dark background areas.</li>
+<li>The ghost buttons should be used exclusivelt on banners where the background is an image.</li>
+</ul>
+</div>
+      </div>
+  </div>
+
+  
+
+    <div class="pattern-details push" id="buttons-buttons">
+
+      <div class="pattern-examples">
+        <div class="gutter">
+          <iframe class="push" src="patterns/buttons/buttons.html" onload="resizeIframe(this)"></iframe>
+        </div>
+          <div class="gutter">
+            <div class="pattern-code milli island-1-2">
+              <code><pre>&lt;a class="btn" href="#"&gt;Standard button&lt;/a>
+&lt;a class="btn btn-light" href="#">Light button&lt;/a>
+&lt;a class="btn btn-ghost" href="#">Ghost button&lt;/a>
 </pre></code>
             </div>
           </div>
