--- a/patterns/brand/1-logos.html
+++ b/patterns/brand/1-logos.html
@@ -11,7 +11,7 @@
   <link href="common.min.css" rel="stylesheet">
   <link href="brand.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700|Roboto:300,300i,400,400i,500,500i" rel="stylesheet">
 </head>
 <body>
 
@@ -19,10 +19,12 @@
   <div class="grid">
     <div class="unit [ xs-1 m-1-2 ]">
       <h1 class="patternbot-color-body yotta"><span style="color: var(--color-primary)">
-          Pattern Library
+          Birch Haven Rescue and Rehabilitation Services
+          <span class="patternbot-sub-heading block giga">Pattern Library</span>
       </h1>
       <div class="patternbot-brand-desc peta">
-          <p>This pattern library is the source for all the colours, fonts &amp; styles available for our website.</p>
+          <p>BHRR is a highly experienced, educated and knowledgeable Great Dane and Giant Canine Breed Rescue plus also assisting Equines, BHRR has a strong focus on the Special Needs – (Deaf and/or Blind, Sick, Senior &amp; Injured)</p>
+
       </div>
     </div>
     <div class="unit [ xs-1 m-1-2 ] text-center gutter">
