--- a/patterns/brand/3-typefaces.html
+++ b/patterns/brand/3-typefaces.html
@@ -11,7 +11,7 @@
   <link href="common.min.css" rel="stylesheet">
   <link href="brand.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700|Roboto:300,300i,400,400i,500,500i" rel="stylesheet">
 </head>
 <body>
 
@@ -22,6 +22,11 @@
         <li><code>var(--font-primary)</code></li>
       </ul>
       <h2 class="patternbot-color-body yotta" style="font-family:var(--font-primary);"><span style="color: var(--color-primary)">Roboto</span> is the primary typeface</h2>
+        <div class="patternbot-max-length tera max-length">
+          <p>The primary typeface represents a simply, easy sans-serif that has trusting look and feel.</p>
+<p>Use the primary typeface for body copy, captions and everything other than what the secondary is used for.</p>
+
+        </div>
 
           <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: 300;</code></li>
@@ -84,36 +89,6 @@
             </div>
           </div>
           <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
-            <li><code>font-weight: 900;</code></li>
-            <li><code>font-style: normal;</code></li>
-          </ul>
-          <div class="grid grid-middle" style="font-weight:900;">
-            <div class="unit [ xs-1 m-1-5 ]" style="color: var(--color-primary)">
-              <p class="yotta push-0">Aa Gg<br>Ss Zz</p>
-            </div>
-            <div class="unit [ xs-1 m-4-5 ]">
-              <p class="giga push-0">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
-              <p class="giga push-0">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
-              <p class="tera push-0">1 2 3 4 5 6 7 8 9 0</p>
-              <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
-            </div>
-          </div>
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
-            <li><code>font-weight: 900;</code></li>
-            <li><code>font-style: italic;</code></li>
-          </ul>
-          <div class="grid grid-middle" style="font-weight:900; font-style:italic;">
-            <div class="unit [ xs-1 m-1-5 ]" style="color: var(--color-primary)">
-              <p class="yotta push-0">Aa Gg<br>Ss Zz</p>
-            </div>
-            <div class="unit [ xs-1 m-4-5 ]">
-              <p class="giga push-0">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
-              <p class="giga push-0">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
-              <p class="tera push-0">1 2 3 4 5 6 7 8 9 0</p>
-              <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
-            </div>
-          </div>
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: normal;</code></li>
             <li><code>font-style: normal;</code></li>
           </ul>
@@ -143,6 +118,51 @@
               <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
             </div>
           </div>
+    </section>
+
+    <section class="pad-t" style="font-family:var(--font-secondary);">
+      <hr class="patternbot-hr">
+
+      <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+        <li><code>var(--font-secondary)</code></li>
+      </ul>
+      <h2 class="patternbot-color-body yotta" style="font-family:var(--font-secondary);"><span style="color:var(--color-primary);">Roboto Slab</span> is the secondary typeface</h2>
+        <div class="patternbot-max-length tera max-length">
+          <p>The secondary typeface is a sans-serif, which mimics the look and feel of the primary.</p>
+<p>The secondary typeface should be used for headings, buttons and important information.</p>
+
+        </div>
+
+          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+            <li><code>font-weight: 300;</code></li>
+            <li><code>font-style: normal;</code></li>
+          </ul>
+          <div class="grid grid-middle" style="font-weight:300;">
+            <div class="unit [ xs-1 m-1-5 ]" style="color: var(--color-primary)">
+              <p class="yotta push-0">Aa Gg<br>Ss Zz</p>
+            </div>
+            <div class="unit [ xs-1 m-4-5 ]">
+              <p class="giga push-0">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+              <p class="giga push-0">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
+              <p class="tera push-0">1 2 3 4 5 6 7 8 9 0</p>
+              <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
+            </div>
+          </div>
+          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+            <li><code>font-weight: normal;</code></li>
+            <li><code>font-style: normal;</code></li>
+          </ul>
+          <div class="grid grid-middle" style="font-weight:normal;">
+            <div class="unit [ xs-1 m-1-5 ]" style="color: var(--color-primary)">
+              <p class="yotta push-0">Aa Gg<br>Ss Zz</p>
+            </div>
+            <div class="unit [ xs-1 m-4-5 ]">
+              <p class="giga push-0">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+              <p class="giga push-0">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
+              <p class="tera push-0">1 2 3 4 5 6 7 8 9 0</p>
+              <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
+            </div>
+          </div>
           <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: bold;</code></li>
             <li><code>font-style: normal;</code></li>
@@ -158,31 +178,6 @@
               <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
             </div>
           </div>
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
-            <li><code>font-weight: bold;</code></li>
-            <li><code>font-style: italic;</code></li>
-          </ul>
-          <div class="grid grid-middle" style="font-weight:bold; font-style:italic;">
-            <div class="unit [ xs-1 m-1-5 ]" style="color: var(--color-primary)">
-              <p class="yotta push-0">Aa Gg<br>Ss Zz</p>
-            </div>
-            <div class="unit [ xs-1 m-4-5 ]">
-              <p class="giga push-0">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
-              <p class="giga push-0">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
-              <p class="tera push-0">1 2 3 4 5 6 7 8 9 0</p>
-              <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
-            </div>
-          </div>
-    </section>
-
-    <section class="pad-t" style="font-family:var(--font-secondary);">
-      <hr class="patternbot-hr">
-
-      <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
-        <li><code>var()</code></li>
-      </ul>
-      <h2 class="patternbot-color-body yotta" style="font-family:var(--font-secondary);"><span style="color:var(--color-primary);"></span> is the secondary typeface</h2>
-
     </section>
 
 
