--- a/patterns/grid/1-grid-sizes.html
+++ b/patterns/grid/1-grid-sizes.html
@@ -11,7 +11,7 @@
   <link href="common.min.css" rel="stylesheet">
   <link href="grid.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700|Roboto:300,300i,400,400i,500,500i" rel="stylesheet">
 </head>
 <body>
 
