add in forms html and css

--- a/patterns/banner/basic-banner.html
+++ b/patterns/banner/basic-banner.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Basic card</title>
+  <title>Basic banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -10,13 +10,14 @@
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="../buttons/buttons.css" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700|Roboto:300,300i,400,400i,500,500i">
-  <link href="cards.css" rel="stylesheet">
+  <link href="banner.css" rel="stylesheet">
 </head>
 <body>
 
-  <div class="card card-basic island-1-2 text-right">
-    <h2 class="push-1-2">Dog's Name</h2>
-    <a class="btn">Learn more about...</a>
+  <div class="card banner-basic island-1-2 text-left">
+    <h1 class="banner push-1-2">Banner Pick Up</h1>
+    <p class="banner">More info about banner...</p>
+    <a class="btn btn-light">Destination of banner...</a>
   </div>
 
 </body>
