--- a/patterns/brand/1-logos.html
+++ b/patterns/brand/1-logos.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Brand</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+    html { color: rgb(var(--color-patternbot-interface), var(--color-patternbot-interface), var(--color-patternbot-interface)); }
+  </style>
   <link href="modulifier.min.css" rel="stylesheet">
   <link href="gridifier.min.css" rel="stylesheet">
   <link href="typografier.min.css" rel="stylesheet">
@@ -28,9 +31,6 @@
       </div>
     </div>
     <div class="unit [ xs-1 m-1-2 ] text-center gutter">
-        <i class="icon i-192 block center-block push-1-2">
-          <img class="img-flex" src="../../images/logo.svg" alt="">
-        </i>
     </div>
   </div>
 </section>
