--- a/patterns/brand/2-colours.html
+++ b/patterns/brand/2-colours.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Brand</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+    html { color: rgb(var(--color-patternbot-interface), var(--color-patternbot-interface), var(--color-patternbot-interface)); }
+  </style>
   <link href="modulifier.min.css" rel="stylesheet">
   <link href="gridifier.min.css" rel="stylesheet">
   <link href="typografier.min.css" rel="stylesheet">
@@ -31,13 +34,13 @@
         </div>
       </div>
 
-      <ul class="patterbot-color-swatch-labels patternbot-color-body list-group-inline milli pad-t-1-2 push-0">
+      <ul class="patterbot-color-swatch-labels patternbot-color-body patternbot-list-group list-group-inline milli pad-t-1-2 push-0">
           <li class="push-r-1-2">
             <div class="push-1-2">
               <i class="icon i-24" style="background-color:var(--color-primary);">&nbsp;</i>
               <span class="icon-label">Primary</span>
             </div>
-            <ul class="patternbot-code-details patternbot-code-details-under list-group micro push-0">
+            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
               <li class="push-1-8"><code>var(--color-primary)</code></li>
               <li class="push-1-8"><code>#8b8aaa</code></li>
               <li><code>rgba(139, 138, 170, 1)</code></li>
@@ -62,13 +65,13 @@
         </div>
       </div>
 
-      <ul class="patterbot-color-swatch-labels patternbot-color-body list-group-inline milli pad-t-1-2 push-0">
+      <ul class="patterbot-color-swatch-labels patternbot-color-body patternbot-list-group list-group-inline milli pad-t-1-2 push-0">
           <li class="push-r-1-2">
             <div class="push-1-2">
               <i class="icon i-24" style="background-color:var(--color-secondary);">&nbsp;</i>
               <span class="icon-label">Secondary</span>
             </div>
-            <ul class="patternbot-code-details patternbot-code-details-under list-group micro push-0">
+            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
               <li class="push-1-8"><code>var(--color-secondary)</code></li>
               <li class="push-1-8"><code>#f59799</code></li>
               <li><code>rgba(245, 151, 153, 1)</code></li>
@@ -85,14 +88,14 @@
           <p>The accent colour represents a nature based colour to bring another calming and trusting feel to the website. Use them for the header and button backgrounds.</p>
 
         </div>
-      <ul class="patterbot-color-swatch-labels patternbot-color-body list-group-inline milli push-0">
+      <ul class="patterbot-color-swatch-labels patternbot-color-body patternbot-list-group list-group-inline milli push-0">
           <li class="push-r-1-2 push">
             <div class="patternbot-color-swatches patternbot-color-swatches-accent push-1-2" style="background-color:var(--color-accent);">&nbsp;</div>
             <div class="push-1-2">
               <i class="icon i-24" style="background-color:var(--color-accent);">&nbsp;</i>
               <span class="icon-label">Accent</span>
             </div>
-            <ul class="patternbot-code-details patternbot-code-details-under list-group micro push-0">
+            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
               <li class="push-1-8"><code>var(--color-accent)</code></li>
               <li class="push-1-8"><code>#cde7ce</code></li>
               <li><code>rgba(205, 231, 206, 1)</code></li>
@@ -104,7 +107,7 @@
               <i class="icon i-24" style="background-color:var(--color-background);">&nbsp;</i>
               <span class="icon-label">Background</span>
             </div>
-            <ul class="patternbot-code-details patternbot-code-details-under list-group micro push-0">
+            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
               <li class="push-1-8"><code>var(--color-background)</code></li>
               <li class="push-1-8"><code>#fdfdfd</code></li>
               <li><code>rgba(253, 253, 253, 1)</code></li>
@@ -116,7 +119,7 @@
               <i class="icon i-24" style="background-color:var(--color-banner);">&nbsp;</i>
               <span class="icon-label">Banner</span>
             </div>
-            <ul class="patternbot-code-details patternbot-code-details-under list-group micro push-0">
+            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
               <li class="push-1-8"><code>var(--color-banner)</code></li>
               <li class="push-1-8"><code>#fff</code></li>
               <li><code>rgba(255, 255, 255, 1)</code></li>
@@ -133,14 +136,14 @@
           <p>The neutral colour makes it so the dark-black of the usual text isn&#39;t too bold and harsh and blends more with the branding of the company. Use them for the body copy and captions.</p>
 
         </div>
-      <ul class="patterbot-color-swatch-labels patternbot-color-body list-group-inline milli push-0">
+      <ul class="patterbot-color-swatch-labels patternbot-color-body patternbot-list-group list-group-inline milli push-0">
           <li class="push-r-1-2 push">
             <div class="patternbot-color-swatches patternbot-color-swatches-accent push-1-2" style="background-color:var(--color-neutral);">&nbsp;</div>
             <div class="push-1-2">
               <i class="icon i-24" style="background-color:var(--color-neutral);">&nbsp;</i>
               <span class="icon-label">Neutral</span>
             </div>
-            <ul class="patternbot-code-details patternbot-code-details-under list-group micro push-0">
+            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
               <li class="push-1-8"><code>var(--color-neutral)</code></li>
               <li class="push-1-8"><code>#333</code></li>
               <li><code>rgba(51, 51, 51, 1)</code></li>
