--- a/patterns/brand/3-typefaces.html
+++ b/patterns/brand/3-typefaces.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Brand</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+    html { color: rgb(var(--color-patternbot-interface), var(--color-patternbot-interface), var(--color-patternbot-interface)); }
+  </style>
   <link href="modulifier.min.css" rel="stylesheet">
   <link href="gridifier.min.css" rel="stylesheet">
   <link href="typografier.min.css" rel="stylesheet">
@@ -18,7 +21,7 @@
   <div class="text-left">
 
     <section style="font-family:var(--font-primary);">
-      <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+      <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
         <li><code>var(--font-primary)</code></li>
       </ul>
       <h2 class="patternbot-color-body yotta" style="font-family:var(--font-primary);"><span style="color: var(--color-primary)">Roboto</span> is the primary typeface</h2>
@@ -28,7 +31,7 @@
 
         </div>
 
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+          <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: 300;</code></li>
             <li><code>font-style: normal;</code></li>
           </ul>
@@ -43,7 +46,7 @@
               <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
             </div>
           </div>
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+          <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: 300;</code></li>
             <li><code>font-style: italic;</code></li>
           </ul>
@@ -58,7 +61,7 @@
               <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
             </div>
           </div>
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+          <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: 500;</code></li>
             <li><code>font-style: normal;</code></li>
           </ul>
@@ -73,7 +76,7 @@
               <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
             </div>
           </div>
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+          <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: 500;</code></li>
             <li><code>font-style: italic;</code></li>
           </ul>
@@ -88,7 +91,7 @@
               <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
             </div>
           </div>
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+          <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: normal;</code></li>
             <li><code>font-style: normal;</code></li>
           </ul>
@@ -103,7 +106,7 @@
               <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
             </div>
           </div>
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+          <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: normal;</code></li>
             <li><code>font-style: italic;</code></li>
           </ul>
@@ -123,7 +126,7 @@
     <section class="pad-t" style="font-family:var(--font-secondary);">
       <hr class="patternbot-hr">
 
-      <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+      <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
         <li><code>var(--font-secondary)</code></li>
       </ul>
       <h2 class="patternbot-color-body yotta" style="font-family:var(--font-secondary);"><span style="color:var(--color-primary);">Roboto Slab</span> is the secondary typeface</h2>
@@ -133,7 +136,7 @@
 
         </div>
 
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+          <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: 300;</code></li>
             <li><code>font-style: normal;</code></li>
           </ul>
@@ -148,7 +151,7 @@
               <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
             </div>
           </div>
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+          <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: normal;</code></li>
             <li><code>font-style: normal;</code></li>
           </ul>
@@ -163,7 +166,7 @@
               <p class="exa push-0">&amp; % $ # @ ! * ? , . ; — – - ( ) “ ” ‘ ’ « »</p>
             </div>
           </div>
-          <ul class="patternbot-code-details list-group-inline micro push-1-2 pad-t">
+          <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: bold;</code></li>
             <li><code>font-style: normal;</code></li>
           </ul>
