--- a/patterns/icons/1-icons.html
+++ b/patterns/icons/1-icons.html
@@ -18,10 +18,18 @@
 </head>
 <body>
 
-  <!-- patternbot:hide-start -->
-<ul class="patternbot-icon-display patternbot-list-group list-group-inline push-2">
+  <svg hidden>
+    <symbol id="icon-copy" viewBox="0 0 256 256">
+      <rect width="125.7" height="27.83" x="65.2" y="175"/>
+      <rect width="125.7" height="27.83" x="65.2" y="117.8"/>
+      <polygon points="82.9 10 82.9 66.8 107.1 66.8 148.9 66.8 173.1 66.8 173.1 10 82.9 10"/>
+      <rect width="219.8" height="207.33" x="18.1" y="38.7" fill="none" stroke-miterlimit="10" stroke-width="20" rx="18.8" ry="18.8"/>
+    </symbol>
+  </svg>
+
+  <ul class="patternbot-icon-display patternbot-list-group list-group-inline">
     <li>
-      <div class="clearfix">
+      <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
             <svg><use xlink:href="../../images/icons.svg#adopt-us" /></svg>
@@ -44,10 +52,16 @@
           <svg><use xlink:href="../../images/icons.svg#adopt-us" /></svg>
         </i>
         <span class="icon-label ib"><code class="micro">#adopt-us</code></span>
+        <span class="icon-label ib"><button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: adopt-us" aria-label="Copy icon: adopt-us" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#adopt-us&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18">
+              <svg><use xlink:href="#icon-copy"></use></svg>
+            </i>
+          </button>
+        </span>
       </div>
     </li>
     <li>
-      <div class="clearfix">
+      <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
             <svg><use xlink:href="../../images/icons.svg#application" /></svg>
@@ -70,10 +84,16 @@
           <svg><use xlink:href="../../images/icons.svg#application" /></svg>
         </i>
         <span class="icon-label ib"><code class="micro">#application</code></span>
+        <span class="icon-label ib"><button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: application" aria-label="Copy icon: application" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#application&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18">
+              <svg><use xlink:href="#icon-copy"></use></svg>
+            </i>
+          </button>
+        </span>
       </div>
     </li>
     <li>
-      <div class="clearfix">
+      <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
             <svg><use xlink:href="../../images/icons.svg#logo" /></svg>
@@ -96,10 +116,16 @@
           <svg><use xlink:href="../../images/icons.svg#logo" /></svg>
         </i>
         <span class="icon-label ib"><code class="micro">#logo</code></span>
+        <span class="icon-label ib"><button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: logo" aria-label="Copy icon: logo" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#logo&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18">
+              <svg><use xlink:href="#icon-copy"></use></svg>
+            </i>
+          </button>
+        </span>
       </div>
     </li>
     <li>
-      <div class="clearfix">
+      <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
             <svg><use xlink:href="../../images/icons.svg#donate" /></svg>
@@ -122,10 +148,16 @@
           <svg><use xlink:href="../../images/icons.svg#donate" /></svg>
         </i>
         <span class="icon-label ib"><code class="micro">#donate</code></span>
+        <span class="icon-label ib"><button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: donate" aria-label="Copy icon: donate" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#donate&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18">
+              <svg><use xlink:href="#icon-copy"></use></svg>
+            </i>
+          </button>
+        </span>
       </div>
     </li>
     <li>
-      <div class="clearfix">
+      <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
             <svg><use xlink:href="../../images/icons.svg#toggle" /></svg>
@@ -148,10 +180,16 @@
           <svg><use xlink:href="../../images/icons.svg#toggle" /></svg>
         </i>
         <span class="icon-label ib"><code class="micro">#toggle</code></span>
+        <span class="icon-label ib"><button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: toggle" aria-label="Copy icon: toggle" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#toggle&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18">
+              <svg><use xlink:href="#icon-copy"></use></svg>
+            </i>
+          </button>
+        </span>
       </div>
     </li>
     <li>
-      <div class="clearfix">
+      <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
             <svg><use xlink:href="../../images/icons.svg#wordmark" /></svg>
@@ -174,16 +212,15 @@
           <svg><use xlink:href="../../images/icons.svg#wordmark" /></svg>
         </i>
         <span class="icon-label ib"><code class="micro">#wordmark</code></span>
+        <span class="icon-label ib"><button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: wordmark" aria-label="Copy icon: wordmark" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#wordmark&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18">
+              <svg><use xlink:href="#icon-copy"></use></svg>
+            </i>
+          </button>
+        </span>
       </div>
     </li>
 </ul>
-<!-- patternbot:hide-end -->
-
-<!-- patternbot:hide-start --><aside hidden><!-- patternbot:hide-end -->
-<i class="icon i-192">
-  <svg><use xlink:href="images/icons.svg#ID-FROM-LIST" /></svg>
-</i>
-<!-- patternbot:hide-start --></aside><!-- patternbot:hide-end -->
 
 
 </body>
