--- a/patterns/brand/1-logos.html
+++ b/patterns/brand/1-logos.html
@@ -18,10 +18,19 @@
 </head>
 <body>
 
+  <svg hidden>
+    <symbol id="icon-copy" viewBox="0 0 256 256">
+      <rect width="125.7" height="27.83" x="65.2" y="175"/>
+      <rect width="125.7" height="27.83" x="65.2" y="117.8"/>
+      <polygon points="82.9 10 82.9 66.8 107.1 66.8 148.9 66.8 173.1 66.8 173.1 10 82.9 10"/>
+      <rect width="219.8" height="207.33" x="18.1" y="38.7" fill="none" stroke-miterlimit="10" stroke-width="20" rx="18.8" ry="18.8"/>
+    </symbol>
+  </svg>
+
   <section class="text-left">
   <div class="grid">
     <div class="unit [ xs-1 m-1-2 ]">
-      <h1 class="patternbot-color-body yotta"><span style="color: var(--color-primary)">
+      <h1 class="patternbot-color-body patternbot-color-user-or-body yotta" style="color: var(--color-primary)">
           Birch Haven Rescue and Rehabilitation Services
           <span class="patternbot-sub-heading block giga">Pattern Library</span>
       </h1>
