--- a/patterns/brand/3-typefaces.html
+++ b/patterns/brand/3-typefaces.html
@@ -18,11 +18,27 @@
 </head>
 <body>
 
+  <svg hidden>
+    <symbol id="icon-copy" viewBox="0 0 256 256">
+      <rect width="125.7" height="27.83" x="65.2" y="175"/>
+      <rect width="125.7" height="27.83" x="65.2" y="117.8"/>
+      <polygon points="82.9 10 82.9 66.8 107.1 66.8 148.9 66.8 173.1 66.8 173.1 10 82.9 10"/>
+      <rect width="219.8" height="207.33" x="18.1" y="38.7" fill="none" stroke-miterlimit="10" stroke-width="20" rx="18.8" ry="18.8"/>
+    </symbol>
+  </svg>
+
   <div class="text-left">
 
     <section style="font-family:var(--font-primary);">
       <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
-        <li><code>var(--font-primary)</code></li>
+        <li class="relative">
+          <code>var(--font-primary)</code>
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy font: --font-primary" aria-label="Copy font: --font-primary" data-clipboard-text="var(--font-primary)" hidden>
+            <i class="icon i-18">
+              <svg><use xlink:href="#icon-copy"></use></svg>
+            </i>
+          </button>
+        </li>
       </ul>
       <h2 class="patternbot-color-body yotta" style="font-family:var(--font-primary);"><span style="color: var(--color-primary)">Roboto</span> is the primary typeface</h2>
         <div class="patternbot-max-length tera max-length">
@@ -127,7 +143,14 @@
       <hr class="patternbot-hr">
 
       <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
-        <li><code>var(--font-secondary)</code></li>
+        <li class="relative">
+          <code>var(--font-secondary)</code>
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy font: --font-secondary" aria-label="Copy font: --font-secondary" data-clipboard-text="var(--font-secondary)" hidden>
+            <i class="icon i-18">
+              <svg><use xlink:href="#icon-copy"></use></svg>
+            </i>
+          </button>
+        </li>
       </ul>
       <h2 class="patternbot-color-body yotta" style="font-family:var(--font-secondary);"><span style="color:var(--color-primary);">Roboto Slab</span> is the secondary typeface</h2>
         <div class="patternbot-max-length tera max-length">
