fixing adopt page errors

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <nav class="nav mega">
             <ul class="list-group">
                 <li>
-                  <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="/pages/adopt.html" target="_blank">
+                  <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="pages/adopt.html" target="_blank">
                     <div class="relative">
                       <span>Adopt</span>
                       <i class="icon i-18 absolute pin-cr">
@@ -87,7 +87,17 @@
                   </a>
                 </li>
                 <li>
-                  <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="/pages/index.html" target="_blank">
+                  <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="pages/form.html" target="_blank">
+                    <div class="relative">
+                      <span>Form</span>
+                      <i class="icon i-18 absolute pin-cr">
+                        <svg><use xlink:href="#icon-pop-out" /></svg>
+                      </i>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="pages/index.html" target="_blank">
                     <div class="relative">
                       <span>Home</span>
                       <i class="icon i-18 absolute pin-cr">
