--- a/pages/adopt.html
+++ b/pages/adopt.html
@@ -31,9 +31,9 @@
         </label>
         <nav role="navigation" class="mainnav" id="mainnav">
           <ul class="mainnav-link-group grid grid-middle list-group milli gutter-2 pad-t-1-2 pad-b">
-            <li class="unit [ xs-1 s-1 m-1-4 ] mainnav-link-border"><a class="mainnav-link-right mainnav-link block pad-t-1-2 pad-b-1-2" href="#index.html">Home</a></li>
-            <li class="unit [ xs-1 s-1 m-1-4 ] mainnav-link-border"><a class="current mainnav-link-right mainnav-link block pad-t-1-2 pad-b-1-2" href="#">Adopt Us</a></li>
-            <li class="unit [ xs-1 s-1 m-1-4 ] mainnav-link-border"><a class="mainnav-link-right mainnav-link block pad-t-1-2 pad-b-1-2" href="#">Help Us</a></li>
+            <li class="unit [ xs-1 s-1 m-1-4 ] mainnav-link-border"><a class="mainnav-link block pad-t-1-2 pad-b-1-2" href="#index.html">Home</a></li>
+            <li class="unit [ xs-1 s-1 m-1-4 ] mainnav-link-border"><a class="current mainnav-link block pad-t-1-2 pad-b-1-2" href="#">Adopt Us</a></li>
+            <li class="unit [ xs-1 s-1 m-1-4 ] mainnav-link-border"><a class="mainnav-link block pad-t-1-2 pad-b-1-2" href="#">Help Us</a></li>
             <li class="unit [ xs-1 s-1 m-1-4 ] mainnav-link-border"><a class="mainnav-link block pad-t-1-2 pad-b-1-2" href="#">Contact Us</a></li>
           </ul>
         </nav>
