finish form page

--- a/patterns/brand/2-colours.html
+++ b/patterns/brand/2-colours.html
@@ -32,7 +32,7 @@
     <section>
       <h2 class="patternbot-color-body giga push-1-4">Primary colours</h2>
         <div class="patternbot-max-length italic max-length">
-          <p>The primary colour is a calming purple/blue that calms the page and gives the page a trusting feel. Use them for h1-3, footers and emphasis.</p>
+          <p>The primary colour is a natural black that calms the page and gives the page a trusting feel. Use them for h1-3, footers and emphasis.</p>
 
         </div>
 
@@ -70,7 +70,7 @@
 
       <h2 class="patternbot-color-body giga push-1-4">Secondary colours</h2>
         <div class="patternbot-max-length italic max-length">
-          <p>The secondary colour brings a pop of bright to the page so it doesn&#39;t all wash out. Use them for the cards and footer background and for h4-6.</p>
+          <p>The secondary colour brings a pop of bright to the page so it doesn&#39;t all wash out. Use them for the cards and footer background.</p>
 
         </div>
 
@@ -131,77 +131,9 @@
               <li><code>rgba(138, 174, 192, 1)</code></li>
             </ul>
           </li>
-          <li class="push">
-            <div class="patternbot-color-swatches patternbot-color-swatches-accent push-1-2" style="background-color:var(--color-background);">&nbsp;</div>
-            <div class="push-1-2">
-              <i class="patternbot-color-swatches icon i-24" style="background-color:var(--color-background);">&nbsp;</i>
-              <span class="icon-label">Background</span>
-            </div>
-            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
-              <li class="push-1-8 relative">
-                <code>var(--color-background)</code>
-                <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy color: --color-background" aria-label="Copy color: --color-background" data-clipboard-text="var(--color-background)" hidden>
-                  <i class="icon i-18">
-                    <svg><use xlink:href="#icon-copy"></use></svg>
-                  </i>
-                </button>
-              </li>
-              <li class="push-1-8"><code>#fdfdfd</code></li>
-              <li><code>rgba(253, 253, 253, 1)</code></li>
-            </ul>
-          </li>
-          <li class="push">
-            <div class="patternbot-color-swatches patternbot-color-swatches-accent push-1-2" style="background-color:var(--color-banner);">&nbsp;</div>
-            <div class="push-1-2">
-              <i class="patternbot-color-swatches icon i-24" style="background-color:var(--color-banner);">&nbsp;</i>
-              <span class="icon-label">Banner</span>
-            </div>
-            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
-              <li class="push-1-8 relative">
-                <code>var(--color-banner)</code>
-                <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy color: --color-banner" aria-label="Copy color: --color-banner" data-clipboard-text="var(--color-banner)" hidden>
-                  <i class="icon i-18">
-                    <svg><use xlink:href="#icon-copy"></use></svg>
-                  </i>
-                </button>
-              </li>
-              <li class="push-1-8"><code>#fff</code></li>
-              <li><code>rgba(255, 255, 255, 1)</code></li>
-            </ul>
-          </li>
       </ul>
     </section>
 
-    <section class="pad-t">
-      <hr class="patternbot-hr">
-
-      <h2 class="patternbot-color-body giga push-1-4">Neutral colours</h2>
-        <div class="patternbot-max-length italic max-length">
-          <p>The neutral colour makes it so the dark-black of the usual text isn&#39;t too bold and harsh and blends more with the branding of the company. Use them for the body copy and captions.</p>
-
-        </div>
-      <ul class="patterbot-color-swatch-labels patternbot-color-body patternbot-list-group list-group-inline milli push-0">
-          <li class="push">
-            <div class="patternbot-color-swatches patternbot-color-swatches-accent push-1-2" style="background-color:var(--color-neutral);">&nbsp;</div>
-            <div class="push-1-2">
-              <i class="patternbot-color-swatches icon i-24" style="background-color:var(--color-neutral);">&nbsp;</i>
-              <span class="icon-label">Neutral</span>
-            </div>
-            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
-              <li class="push-1-8 relative">
-                <code>var(--color-neutral)</code>
-                <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy color: --color-neutral" aria-label="Copy color: --color-neutral" data-clipboard-text="var(--color-neutral)" hidden>
-                  <i class="icon i-18">
-                    <svg><use xlink:href="#icon-copy"></use></svg>
-                  </i>
-                </button>
-              </li>
-              <li class="push-1-8"><code>#333</code></li>
-              <li><code>rgba(51, 51, 51, 1)</code></li>
-            </ul>
-          </li>
-      </ul>
-    </section>
 
 </div>
 
