--- a/patterns/cards/basic-card.html
+++ b/patterns/cards/basic-card.html
@@ -14,10 +14,17 @@
 </head>
 <body>
 
-  <div class="card card-basic island-1-2 text-right">
-    <h2 class="push-1-2">Dog's Name</h2>
-    <a class="btn">Learn more about...</a>
-  </div>
+  <li class="unit [ xs-1 s-1-2 m-1-3 ] unit-content-distribute list-group island-1-4">
+    <a href="#" class="card icon-link block text-left content-fill unit-content-distribute gutter pad-t-2 pad-b-2">
+      <div class="push">
+        <img class="img-flex" src="http://placehold.it/256x256" alt="">
+      </div>
+      <h2 class="card-title mega push-0">Whisper</h2>
+      <p class="content-fill push-0">Great Dane</p>
+      <p class="push-0">Female, Age 3</p>
+      <a class="btn">Learn more about...</a>
+    </a>
+  </li>
 
 </body>
 </html>
