--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <li role="presentation"><a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="forms" href="#forms">Forms</a></li>
                 <li role="presentation"><a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="header-footer" href="#header-footer">Header &amp; footer</a></li>
                 <li role="presentation"><a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="navigation" href="#navigation">Navigation</a></li>
+                <li role="presentation"><a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="sections" href="#sections">Sections</a></li>
             <li class="pad-t-1-2" role="presentation">
               <button class="nav-show-all gutter pad-t-1-4 pad-b-1-4 block kilo" id="nav-show-all" aria-pressed="false" title="Show all patterns" aria-label="Show all patterns">
                 <span class="nav-show-all-wrap relative block">Show all</span>
@@ -858,10 +859,17 @@ width: 250px.</p>
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="cards-basic-card-code-sample-copy-chunk">&lt;div class="card card-basic island-1-2 text-right"&gt;
-  &lt;h2 class="push-1-2">Dog&apos;s Name&lt;/h2>
-  &lt;a class="btn">Learn more about...&lt;/a>
-&lt;/div>
+              <code><pre id="cards-basic-card-code-sample-copy-chunk">&lt;li class="unit [ xs-1 s-1-2 m-1-3 ] unit-content-distribute list-group island-1-4"&gt;
+  &lt;a href="#" class="card icon-link block text-left content-fill unit-content-distribute gutter pad-t-2 pad-b-2">
+    &lt;div class="push">
+      &lt;img class="img-flex" src="http://placehold.it/256x256" alt="">
+    &lt;/div>
+    &lt;h2 class="card-title mega push-0">Whisper&lt;/h2>
+    &lt;p class="content-fill push-0">Great Dane&lt;/p>
+    &lt;p class="push-0">Female, Age 3&lt;/p>
+    &lt;a class="btn">Learn more about...&lt;/a>
+  &lt;/a>
+&lt;/li>
 </pre></code>
             </div>
           </div>
@@ -918,18 +926,12 @@ width: 250px.</p>
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="cards-icon-card-code-sample-copy-chunk">&lt;div class="card island-1-2 text-center"&gt;
-  &lt;i class="icon i-128 push-1-2">
-      &lt;svg id="content" xmlns="http://www.w3.org/2000/svg" width="275.5" height="275.5" viewbox="0 0 275.5 275.5">
-        &lt;title>Logo&lt;/title>
-        &lt;path d="M160.9,192a33.9,33.9,0,0,0,7.8-2.4c1.3-.6,2.6-1,3.8-1.7s3.6-2.1,5.3-3.2a4.1,4.1,0,0,0,1-1c1.2-1.5,2.4-3,3.4-4.6s2-3.6,3-5.4a28.3,28.3,0,0,0,1.8-4c1-3,2-5.9,2.7-8.9a57.8,57.8,0,0,0,1.5-10.9v-.2a3,3,0,0,1-.1-.4c-.1-3-.1-6-.3-9s-.6-4.2-.9-6.3a41.5,41.5,0,0,0-2.4-8.7,10.8,10.8,0,0,1-.3-1.5l-.5-.9c-.6-1.3-1.2-2.7-1.8-4a26.6,26.6,0,0,0-1.5-2.7c-1-1.6-2-3.2-3.1-4.7s-2.9-3.3-4.4-4.9l-2.2-2.1h.1c-6.3-4.3-8.7-10.8-10.1-18-.7-3.7-.8-7.9-2.5-11.1C156.2,66,150.7,57.2,145.2,48c-6.1,8-5.5,18.5-9.8,27.7-11-7.5-13.3-18.9-14.8-30.7l-1.5.4a22.5,22.5,0,0,0-1.4,4.6c-.7,7.8-1.3,15.6-1.9,23.4s-2,12.7-7.9,17-10.1,8.1-15.3,12.1-5.5,6.3-4.5,10.8-.7,7-3.7,9.1-7.6,4.7-11.4,7.1-7.4,4.6-10.5,7.5a8.6,8.6,0,0,0-2.1,6.5,74.1,74.1,0,0,0,3.2,12.4c.5,1.6,1.3,3.9,2.5,4.5,4.8,2.3,9.8,5.1,15,5.9a149.6,149.6,0,0,0,22.3,1.4c7.4.5,9.2-.5,15.9-5.4s11.7-4.4,15,4.8a102.3,102.3,0,0,1,5.2,22.6,34.2,34.2,0,0,0,6.4,2.1A37.5,37.5,0,0,0,160.9,192Z" fill="#010101"/>
-        &lt;path d="M211.9,158l-5.6-8.3c0,.7-.1,1.5-.1,2.2a3.6,3.6,0,0,1,.1.7,61.6,61.6,0,0,1-.5,10.5,4.5,4.5,0,0,1-.2.7c-.1.9-.2,1.7-.3,2.6a59,59,0,0,1-2.9,10.5c-.9,2.1-1.7,4.1-2.7,6.2a42.8,42.8,0,0,1-2.5,4.5c-1.3,2.1-2.7,4.1-4.2,6.1a38.9,38.9,0,0,1-2.9,3.3,36.6,36.6,0,0,1-3.1,3.2c-2,1.6-4,3.3-6,4.7a41.6,41.6,0,0,1-5.7,3.4,50.3,50.3,0,0,1-6.7,2.6c-2.3.7-4.7,1.2-7.1,1.8H161a21.9,21.9,0,0,1-3.2.5l-9.3-.2a16.1,16.1,0,0,1-2.5-.5l-2.4-.4-3.3-.9v1.7c-.4,5.1.7,10.4,1.7,15.6.2,1.1,3,2.5,4.5,2.4,7.4-.6,14.9-1.4,22.2-2.5,13.7-2.2,26.3-6.3,32.3-20.7a7.7,7.7,0,0,1,3.5-4c6.4-2.7,7.9-8,8.4-14.1s.9-10.9,1.9-16.2S215.2,162.8,211.9,158Z" fill="#010101"/>
-        &lt;path d="M206.3,152.6a3.6,3.6,0,0,0-.1-.7c0-.7.1-1.5.1-2.2s0-.1,0-.2a67.9,67.9,0,0,0-2.4-13.7,69.6,69.6,0,0,0-2.6-7.3,47.9,47.9,0,0,0-2.2-4.7c-.6-1.2-1.4-2.3-2.1-3.4l-2.4-3.8h-.2a1.4,1.4,0,0,0-.1-.5l-.6-.7-5.2-6-1.1-1,3.5-.2a21.5,21.5,0,0,0,.5-6.3,1.8,1.8,0,0,0-.1-.4l.2-1.7-1.6.3-.8-.2H176.4a.9.9,0,0,0-.9.6l-1.7,3.9h-.1l2.2,2.1c1.5,1.6,3,3.2,4.4,4.9s2.1,3.1,3.1,4.7a26.6,26.6,0,0,1,1.5,2.7c.6,1.3,1.2,2.7,1.8,4l.5.9a10.8,10.8,0,0,0,.3,1.5,41.5,41.5,0,0,1,2.4,8.7c.3,2.1.8,4.2.9,6.3s.2,6,.3,9a3,3,0,0,0,.1.4v.2a57.8,57.8,0,0,1-1.5,10.9c-.7,3-1.7,6-2.7,8.9a28.3,28.3,0,0,1-1.8,4c-1,1.8-1.9,3.7-3,5.4s-2.3,3.1-3.4,4.6a4.1,4.1,0,0,1-1,1c-1.7,1.1-3.5,2.2-5.3,3.2s-2.5,1.1-3.8,1.7a33.9,33.9,0,0,1-7.8,2.4,37.5,37.5,0,0,1-14.7-.3,34.2,34.2,0,0,1-6.4-2.1l-3.3-1.6a53.7,53.7,0,0,1-5.4-3.3,12.4,12.4,0,0,1-3.3-3.8c-1.2-2.1-2.6-4.1-3.7-6.2a48.6,48.6,0,0,1-3.7-9.3l-.9-3.1-1,.7a28.7,28.7,0,0,1-3.6,2.4l.7,3.1-6.7,1.5-.6-2.4h-4.8c.3,1.6.7,3.3,1.1,4.9a63.7,63.7,0,0,0,2.5,7.1,41.2,41.2,0,0,0,2.3,4.8c1,1.9,2.2,3.7,3.4,5.5s2.5,3.5,3.9,5.2a27.9,27.9,0,0,0,2.6,2.8,61.5,61.5,0,0,0,4.7,4.2c1.9,1.5,4,2.7,5.9,4.1a38.2,38.2,0,0,0,5.9,3.1,32.1,32.1,0,0,0,4.5,1.6l3.3.9,2.4.4a16.1,16.1,0,0,0,2.5.5l9.3.2a21.9,21.9,0,0,0,3.2-.5h.4c2.4-.6,4.8-1.1,7.1-1.8a50.3,50.3,0,0,0,6.7-2.6,41.6,41.6,0,0,0,5.7-3.4c2.1-1.5,4.1-3.1,6-4.7a36.6,36.6,0,0,0,3.1-3.2,38.9,38.9,0,0,0,2.9-3.3c1.5-2,2.9-4,4.2-6.1a42.8,42.8,0,0,0,2.5-4.5c1-2,1.8-4.1,2.7-6.2a59,59,0,0,0,2.9-10.5c.2-.8.2-1.7.3-2.6a4.5,4.5,0,0,0,.2-.7A61.6,61.6,0,0,0,206.3,152.6ZM128,197.3l-10.8-10.1,2.7-2.6,1.7-1.8c.3-.3.5-.3.7,0l3.7,3.6,1.5,1.3,3.9,3.8,1.4,1.2Zm33.2,8H146.1v-6.6h13.7c1.4,0,1.4,0,1.4,1.5S161.2,203.5,161.2,205.3Zm17.2-7.2-4.1-5.3,12.2-8.6,4,5.4ZM198,175.2l-6.4-2.3c.2-.8.4-1.6.7-2.3l2-5.2c.5-1.3,1-2.7,1.4-4.1s.4-.6.8-.4l5.9,2Z" fill="#f69799"/>
-      &lt;/svg>
-    &lt;/i>
-  &lt;h2 class="push">Dogs Name&lt;/h2>
-  &lt;a class="btn btn-ghost">Learn more about&lt;/a>
-&lt;/div>
+              <code><pre id="cards-icon-card-code-sample-copy-chunk">&lt;a href="#" class="card icon-link block text-center content-fill unit-content-distribute gutter pad-t-2 pad-b-2"&gt;
+  &lt;div class="push">
+    &lt;img class="img-flex" src="http://placehold.it/200x200" alt="">
+  &lt;/div>
+  &lt;h2 class="card-title push-0">Adopt Us&lt;/h2>
+&lt;/a>
 </pre></code>
             </div>
           </div>
@@ -1502,20 +1504,23 @@ width: 250px.</p>
                 </i>
               </button>
               <code><pre id="header-footer-footer-code-sample-copy-chunk">&lt;footer class="gutter pad-t pad-b footer"&gt;
+  &lt;div class="grid">
 
-  &lt;div class="micro online centered island-1-2 push-0 gutter-2">
-    &lt;p>&lt;b>Online Community&lt;/b>&lt;/p>
-    &lt;p>Twitter&lt;/p>
-    &lt;p>Facebook&lt;/p>
-    &lt;p>YouTube&lt;/p>
+    &lt;ul class="unit [xs-1 m-1-2 ] footer grid push">
+      &lt;li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]">&lt;a class="footer" href="#">Home&lt;/a>&lt;/li>
+      &lt;li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]">&lt;a class="footer" href="#">Adopt Us&lt;/a>&lt;/li>
+      &lt;li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]">&lt;a class="footer" href="#">Help Us&lt;/a>&lt;/li>
+      &lt;li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]">&lt;a class="footer" href="#">Contact Us&lt;/a>&lt;/li>
+    &lt;/ul>
+
+    &lt;div class="unit [xs-1 m-1-2 ] micro island-1-2 push-0">
+      &lt;p>&lt;b>Online Community&lt;/b>&lt;/p>
+      &lt;p>Twitter&lt;/p>
+      &lt;p>Facebook&lt;/p>
+      &lt;p>YouTube&lt;/p>
+    &lt;/div>
+
   &lt;/div>
-
-  &lt;ul class="footer grid push-2">
-    &lt;li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]">&lt;a class="footer" href="#">Home&lt;/a>&lt;/li>
-    &lt;li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]">&lt;a class="footer" href="#">Adopt Us&lt;/a>&lt;/li>
-    &lt;li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]">&lt;a class="footer" href="#">Help Us&lt;/a>&lt;/li>
-    &lt;li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]">&lt;a class="footer" href="#">Contact Us&lt;/a>&lt;/li>
-  &lt;/ul>
 
   &lt;p class="micro island-1-2 push-0">Copyright 2015 Birch Haven Rescue &amp; Rehabilitation Services.&lt;br>All rights reserved.&lt;/p>
 
@@ -1576,17 +1581,27 @@ width: 250px.</p>
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="header-footer-header-code-sample-copy-chunk">&lt;header class="island "&gt;
-
-  &lt;h1 class="gutter pad-t">Birch Haven Rescue and Rehabilitation Services&lt;/h1>
-
-  &lt;ul class="nav grid">
-    &lt;li class="inline-block island push-0 unit [s-1-2 m-1-4 l-1-4]">&lt;a href="#">Home&lt;/a>&lt;/li>
-    &lt;li class="inline-block island push-0 unit [s-1-2 m-1-4 l-1-4]">&lt;a href="#">Adopt Us&lt;/a>&lt;/li>
-    &lt;li class="inline-block island push-0 unit [s-1-2 m-1-4 l-1-4]">&lt;a href="#">Help Us&lt;/a>&lt;/li>
-    &lt;li class="inline-block island push-0 unit [s-1-2 m-1-4 l-1-4]">&lt;a href="#">Contact Us&lt;/a>&lt;/li>
-  &lt;/ul>
-
+              <code><pre id="header-footer-header-code-sample-copy-chunk">&lt;header role="banner"&gt;
+  &lt;svg>&lt;use xlink:href="../../images/icons.svg#wordmark" />&lt;/svg>
+  &lt;div class="nav-container absolute w-1 zindex-2">
+    &lt;div class="logo-wrapper-xs unit-s-hidden text-center">
+    &lt;/div>
+    &lt;div class="wrapper">
+      &lt;input class="mainnav-check absolute" type="checkbox" id="mainnav-check">
+      &lt;label class="mainnav-label absolute pin-tl" for="mainnav-check">
+        &lt;span class="mainnav-icon mainnav-icon-top block absolute">&lt;/span>
+        &lt;span class="mainnav-icon mainnav-icon-bottom block absolute">&lt;/span>
+      &lt;/label>
+      &lt;nav role="navigation" class="mainnav" id="mainnav">
+        &lt;ul class="mainnav-link-group grid grid-middle list-group milli gutter-2 pad-t-1-2 pad-b">
+          &lt;li class="unit [ xs-1 s-1 m-1-4 ] mainnav-link-border">&lt;a class="mainnav-link block pad-t-1-2 pad-b-1-2" href="index.html">Home&lt;/a>&lt;/li>
+          &lt;li class="unit [ xs-1 s-1 m-1-4 ] mainnav-link-border">&lt;a class="current mainnav-link block pad-t-1-2 pad-b-1-2" href="#">Adopt Us&lt;/a>&lt;/li>
+          &lt;li class="unit [ xs-1 s-1 m-1-4 ] mainnav-link-border">&lt;a class="mainnav-link block pad-t-1-2 pad-b-1-2" href="#">Help Us&lt;/a>&lt;/li>
+          &lt;li class="unit [ xs-1 s-1 m-1-4 ] mainnav-link-border">&lt;a class="mainnav-link block pad-t-1-2 pad-b-1-2" href="#">Contact Us&lt;/a>&lt;/li>
+        &lt;/ul>
+      &lt;/nav>
+    &lt;/div>
+  &lt;/div>
 &lt;/header>
 </pre></code>
             </div>
@@ -1747,6 +1762,81 @@ width: 250px.</p>
     &lt;/nav>
   &lt;/div>
 &lt;/div>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+
+</section>
+
+        <section class="pattern" id="sections" role="tabpanel" hidden aria-hidden="true" style="">
+  <div class="pattern-toolbar gutter pad-t-1-4 pad-b-1-8 relative" style="">
+    <h2 class="pattern-name peta push-1-4">Sections</h2>
+        <ul class="list-group-inline gutter absolute pin-cr">
+            <li>
+              <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="sections-sections-code-sample">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-code"></use></svg>
+                </i>
+              </button>
+            </li>
+            <li>
+              <a class="center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/sections/sections.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-pop-out"></use></svg>
+                </i>
+              </a>
+            </li>
+        </ul>
+  </div>
+
+    <div class="pattern-desc milli island" style="">
+      <div class="max-length"><p>Sections provide a way for the readers eye to take a break in the text on the page.</p>
+</div>
+    </div>
+
+  
+
+    <div class="pattern-details" id="sections-sections" style="">
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <iframe data-src="patterns/sections/sections.html" scrolling="no" onload="resizeIframe(this)" ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="sections-sections-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#sections-sections-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="sections-sections-code-sample-copy-chunk">&lt;section class="section wrapper gutter-2 island pad-b"&gt;
+  &lt;div class="unit [xs-1 m-1-2]">
+    &lt;h2>About Us&lt;/h2>
+    &lt;p>We are a highly experienced, educated and knowledgeable Great Dane and Giant Canine Breed Rescue plus also assisting Equines, BHRR has a strong focus on the Special Needs &#x2013; (Deaf and/or Blind, Sick, Senior &amp; Injured)&lt;/p>
+    &lt;p>*Reputable/Quality Rescue is about helping the next one in need*&lt;/p>
+    &lt;p>Giant Breeds BHRR Assists: Deerhound, Dogue de Bordeaux, English Mastiff, Great Dane, Neapolitan Mastiff, Newfoundland, &amp; Irish Wolfhound&lt;/p>
+    &lt;p>Our area of rescue assistance is across North America &amp; our area of adoption placement is ONLY in Ontario, Quebec and some parts of NY, USA&lt;/p>
+    &lt;p>We also provide a safe &#x2018;haven&#x2019; for animals for life should they not be adopted or are deemed un-adoptable&lt;/p>
+    &lt;p>BHRR is a federally registered non-profit group and we are an all Volunteer, Foster Home based rescue without any salaried employees&lt;/p>
+  &lt;/div>
+&lt;/section>
 </pre></code>
             </div>
           </div>
