--- a/patterns/header-&-footer/footer.html
+++ b/patterns/header-&-footer/footer.html
@@ -14,23 +14,27 @@
 <body>
 
   <footer class="gutter pad-t pad-b footer">
+    <div class="grid">
 
-    <div class="micro online centered island-1-2 push-0 gutter-2">
-      <p><b>Online Community</b></p>
-      <p>Twitter</p>
-      <p>Facebook</p>
-      <p>YouTube</p>
-    </div>
-
-    <ul class="footer grid push-2">
+    <ul class="unit [xs-1 m-1-2 ] footer grid push">
       <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Home</a></li>
       <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Adopt Us</a></li>
       <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Help Us</a></li>
       <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Contact Us</a></li>
     </ul>
 
+    <div class="unit [xs-1 m-1-2 ] micro island-1-2 push-0">
+      <p><b>Online Community</b></p>
+      <p>Twitter</p>
+      <p>Facebook</p>
+      <p>YouTube</p>
+    </div>
+
+  </div>
+
     <p class="micro island-1-2 push-0">Copyright 2015 Birch Haven Rescue & Rehabilitation Services.<br>All rights reserved.</p>
 
   </footer>
+
 </body>
 </html>
